--- a/src/style.css
+++ b/src/style.css
@@ -253,7 +253,7 @@ header {
 
 @keyframes bmenulineanim_2 {
     0% {
-        transform: 10px;
+        transform: rotate(0deg)
     }
     100% {
         transform: rotate(225deg);
@@ -313,8 +313,7 @@ header {
         transform: rotate(0deg);
     }
     100% {
-        margin-top: 0px;
-        transform: rotate(90deg);
+        margin-top: 9px;
     }
 }
 
@@ -322,9 +321,6 @@ header {
 
     0% {
         transform: rotate(225deg);
-    }
-    90% {
-        transform: rotate(0deg);
     }
     100% {
         transform: rotate(0deg);
@@ -337,11 +333,9 @@ header {
     }
     50% {
         margin-top: 0px;
-        transform: rotate(0deg);
     }
     100% {
-        margin-top: 0px;
-        transform: rotate(0deg);
+        margin-top: -9px;
     }
 }
 /* ------------------------- ANIMATION REVERSE END ---------------------- */
